--- a/assets/batchmolds/lang/en.json
+++ b/assets/batchmolds/lang/en.json
@@ -1,42 +1,44 @@
 {
-	"batchmolds:block-batchmold-blue-raw-small": "Raw blue clay ingot batch mold (3 ingots)",
-	"batchmolds:block-batchmold-fire-raw-small": "Raw fire clay ingot batch mold (3 ingots)",
-	"batchmolds:block-batchmold-red-raw-small": "Raw red clay ingot batch mold (3 ingots)",
-	"batchmolds:block-batchmold-blue-fired-small": "Dark brown ceramic ingot batch mold (3 ingots)",
-	"batchmolds:block-batchmold-black-fired-small": "Black ceramic ingot batch mold (3 ingots)",
-	"batchmolds:block-batchmold-brown-fired-small": "Brown ceramic ingot batch mold (3 ingots)",
-	"batchmolds:block-batchmold-cream-fired-small": "Cream ceramic ingot batch mold (3 ingots)",
-	"batchmolds:block-batchmold-fire-fired-small": "Fireclay ceramic ingot batch mold (3 ingots)",
-	"batchmolds:block-batchmold-gray-fired-small": "Gray ceramic ingot batch mold (3 ingots)",
-	"batchmolds:block-batchmold-orange-fired-small": "Orange ceramic ingot batch mold (3 ingots)",
-	"batchmolds:block-batchmold-red-fired-small": "Red ceramic ingot batch mold (3 ingots)",
-	"batchmolds:block-batchmold-tan-fired-small": "Tan ceramic ingot batch mold (3 ingots)",
+	"batchmolds:blockcraftdesc-batchmold-*-raw-*": "To cast a batch of metal ingots for storage or later use on the anvil",
 
-	"batchmolds:block-batchmold-blue-raw-medium": "Raw blue clay ingot batch mold (4 ingots)",
-	"batchmolds:block-batchmold-fire-raw-medium": "Raw fire clay ingot batch mold (4 ingots)",
-	"batchmolds:block-batchmold-red-raw-medium": "Raw red clay ingot batch mold (4 ingots)",
-	"batchmolds:block-batchmold-blue-fired-medium": "Dark brown ceramic ingot batch mold (4 ingots)",
-	"batchmolds:block-batchmold-black-fired-medium": "Black ceramic ingot batch mold (4 ingots)",
-	"batchmolds:block-batchmold-brown-fired-medium": "Brown ceramic ingot batch mold (4 ingots)",
-	"batchmolds:block-batchmold-cream-fired-medium": "Cream ceramic ingot batch mold (4 ingots)",
-	"batchmolds:block-batchmold-fire-fired-medium": "Fireclay ceramic ingot batch mold (4 ingots)",
-	"batchmolds:block-batchmold-gray-fired-medium": "Gray ceramic ingot batch mold (4 ingots)",
-	"batchmolds:block-batchmold-orange-fired-medium": "Orange ceramic ingot batch mold (4 ingots)",
-	"batchmolds:block-batchmold-red-fired-medium": "Red ceramic ingot batch mold (4 ingots)",
-	"batchmolds:block-batchmold-tan-fired-medium": "Tan ceramic ingot batch mold (4 ingots)",
+	"batchmolds:block-batchmold-blue-raw-small": "Raw blue clay 3 ingot batch mold",
+	"batchmolds:block-batchmold-fire-raw-small": "Raw fire clay 3 ingot batch mold",
+	"batchmolds:block-batchmold-red-raw-small": "Raw red clay 3 ingot batch mold",
+	"batchmolds:block-batchmold-blue-fired-small": "Dark brown ceramic 3 ingot batch mold",
+	"batchmolds:block-batchmold-black-fired-small": "Black ceramic 3 ingot batch mold",
+	"batchmolds:block-batchmold-brown-fired-small": "Brown ceramic 3 ingot batch mold",
+	"batchmolds:block-batchmold-cream-fired-small": "Cream ceramic 3 ingot batch mold",
+	"batchmolds:block-batchmold-fire-fired-small": "Fireclay ceramic 3 ingot batch mold",
+	"batchmolds:block-batchmold-gray-fired-small": "Gray ceramic 3 ingot batch mold",
+	"batchmolds:block-batchmold-orange-fired-small": "Orange ceramic 3 ingot batch mold",
+	"batchmolds:block-batchmold-red-fired-small": "Red ceramic 3 ingot batch mold",
+	"batchmolds:block-batchmold-tan-fired-small": "Tan ceramic 3 ingot batch mold",
 
-	"batchmolds:block-batchmold-blue-raw-large": "Raw blue clay ingot batch mold (12 ingots)",
-	"batchmolds:block-batchmold-fire-raw-large": "Raw fire clay ingot batch mold (12 ingots)",
-	"batchmolds:block-batchmold-red-raw-large": "Raw red clay ingot batch mold (12 ingots)",
-	"batchmolds:block-batchmold-blue-fired-large": "Dark brown ceramic ingot batch mold (12 ingots)",
-	"batchmolds:block-batchmold-black-fired-large": "Black ceramic ingot batch mold (12 ingots)",
-	"batchmolds:block-batchmold-brown-fired-large": "Brown ceramic ingot batch mold (12 ingots)",
-	"batchmolds:block-batchmold-cream-fired-large": "Cream ceramic ingot batch mold (12 ingots)",
-	"batchmolds:block-batchmold-fire-fired-large": "Fireclay ceramic ingot batch mold (12 ingots)",
-	"batchmolds:block-batchmold-gray-fired-large": "Gray ceramic ingot batch mold (12 ingots)",
-	"batchmolds:block-batchmold-orange-fired-large": "Orange ceramic ingot batch mold (12 ingots)",
-	"batchmolds:block-batchmold-red-fired-large": "Red ceramic ingot batch mold (12 ingots)",
-	"batchmolds:block-batchmold-tan-fired-large": "Tan ceramic ingot batch mold (12 ingots)",
+	"batchmolds:block-batchmold-blue-raw-medium": "Raw blue clay 4 ingot batch mold",
+	"batchmolds:block-batchmold-fire-raw-medium": "Raw fire clay 4 ingot batch mold",
+	"batchmolds:block-batchmold-red-raw-medium": "Raw red clay 4 ingot batch mold",
+	"batchmolds:block-batchmold-blue-fired-medium": "Dark brown ceramic 4 ingot batch mold",
+	"batchmolds:block-batchmold-black-fired-medium": "Black ceramic 4 ingot batch mold",
+	"batchmolds:block-batchmold-brown-fired-medium": "Brown ceramic 4 ingot batch mold",
+	"batchmolds:block-batchmold-cream-fired-medium": "Cream ceramic 4 ingot batch mold",
+	"batchmolds:block-batchmold-fire-fired-medium": "Fireclay ceramic 4 ingot batch mold",
+	"batchmolds:block-batchmold-gray-fired-medium": "Gray ceramic 4 ingot batch mold",
+	"batchmolds:block-batchmold-orange-fired-medium": "Orange ceramic 4 ingot batch mold",
+	"batchmolds:block-batchmold-red-fired-medium": "Red ceramic 4 ingot batch mold",
+	"batchmolds:block-batchmold-tan-fired-medium": "Tan ceramic 4 ingot batch mold",
+
+	"batchmolds:block-batchmold-blue-raw-large": "Raw blue clay 12 ingot batch mold",
+	"batchmolds:block-batchmold-fire-raw-large": "Raw fire clay 12 ingot batch mold",
+	"batchmolds:block-batchmold-red-raw-large": "Raw red clay 12 ingot batch mold",
+	"batchmolds:block-batchmold-blue-fired-large": "Dark brown ceramic 12 ingot batch mold",
+	"batchmolds:block-batchmold-black-fired-large": "Black ceramic 12 ingot batch mold",
+	"batchmolds:block-batchmold-brown-fired-large": "Brown ceramic 12 ingot batch mold",
+	"batchmolds:block-batchmold-cream-fired-large": "Cream ceramic 12 ingot batch mold",
+	"batchmolds:block-batchmold-fire-fired-large": "Fireclay ceramic 12 ingot batch mold",
+	"batchmolds:block-batchmold-gray-fired-large": "Gray ceramic 12 ingot batch mold",
+	"batchmolds:block-batchmold-orange-fired-large": "Orange ceramic 12 ingot batch mold",
+	"batchmolds:block-batchmold-red-fired-large": "Red ceramic 12 ingot batch mold",
+	"batchmolds:block-batchmold-tan-fired-large": "Tan ceramic 12 ingot batch mold",
 	"batchmolds:block-handbooktext-batchmolds:batchmold-*-fired-*": "<strong>Caution:</strong> Getting a mold with molten metal in it wet will cause the mold to shatter, and you will lose some of the metal.",
 
 	"batchmolds:blockhelp-batchmold-takeingots": "Take ingots"
